	- added: ecasound options '--server', '--server-tcp-port' and
		 '--no-server'; these replace the misleading old
		 options '--daemon', '--nodaemon' and '--daemon-port', 
		 which are now deprecated
	- added: extended unit tests to cover option parsing, with
		 some initial test cases
        - added: unit test framework - minor improvements including
		 abilitity to select which cases to run
	- changed: deprecated 'jack_auto', 'jack_generic' and
	           'jack_alsa'
	- changed: numbering of JACK ports created with 'jack' and
	 	   'jack_generic' starts from "_1" separately for 
		   each prefix [dsacre]
        - changed: deprecated 'ai-wave-edit', 'ao-wave-edit' commands
		   and the 'ext-cmd-wave-editor' ecasoundrc field
	- changed: emit a 'subsystem' level trace message when 
	 	   engine state changes to finished
	- changed: interactive mode - minor update to 'status' command
	  	   output
	- changed: compile libecasoundc as PIC code to make it possible
		   to use it from shared libraries; fixes problems 
		   with e.g. Audio::Ecasound on amd64 architecture ;
		   closes sfbug:2505551
	- changed: ecasound option -f now accepts empty arguments for 
		   sample format, channel count and sampling rate; empty
		   argument states that ecasound can pick a suitable
		   value, either the default value or e.g. the JACK 
		   system sampling rate; updated documentation, see
		   ecasound(1)
        - changed: minor update to ecasound's "--help"
	- changed: when reading RIFF WAVE files, properly ignore 
		   any unknown subchunk types
	- changed: largefile support (+2GiB files) is now enabled
		   by default and configure uses's default autoconf
		   macro AC_SYS_LARGEFILE to perform the checks; 
		   to explicitly disable, use '--disable-largefile';
		   the old '--with-largefile' no longer has any effect
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually