@@ -39,8 +39,8 @@ dnl ---
 
 LIBECASOUND_VERSION=21
 LIBECASOUND_VERSION_AGE=1
-LIBECASOUNDC_VERSION=1
-LIBECASOUNDC_VERSION_AGE=0
+LIBECASOUNDC_VERSION=2
+LIBECASOUNDC_VERSION_AGE=1
 LIBKVUTILS_VERSION=8
 LIBKVUTILS_VERSION_AGE=4
 
