@@ -36,6 +36,12 @@ class ECA_CONTROL_INTERFACE {
  public:
 
   // -------------------------------------------------------------------
+  // State
+  // -------------------------------------------------------------------
+
+  bool ready(void);
+
+  // -------------------------------------------------------------------
   // Issuing EIAM commands
   // -------------------------------------------------------------------
 
